# keyrx

./: .claudeignore  .coverage-baseline.json  .deploy.env.example  .gitignore  ACTIVATION_BUG_REPORT.md  BUGS_FOUND.md  BUG_HUNT_COMPREHENSIVE_REPORT.md  BUG_HUNT_SUMMARY_v0.1.4.md  BUG_REMEDIATION_FINAL_SUMMARY.md  BUG_REMEDIATION_OPERATION_COMPLETE.md  BUG_REMEDIATION_PROGRESS.md  BUILD_COMPLETE.md  CHANGELOG.md  CHANGES_AUTO_DEFAULT_PROFILE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_EVALUATION.md  CODE_REVIEW_REPORT.md  COMMIT_MESSAGE.txt  COMPLETE_REINSTALL.ps1  CONTRIBUTING.md  CRITICAL_DIAGNOSIS.md  CRITICAL_FIX_v0.1.2.md  CRITICAL_FIX_v0.1.3_CONFIG_FREEZE.md  Cargo.toml  DAEMON_DEFAULT_BEHAVIOR.md  DEBUG_20260129_205518.txt  DEBUG_ACTIVATION.ps1  DEBUG_METRICS_E2E.md  DEEP_DIAGNOSTIC.ps1  DIAGNOSE_NOW.ps1  DIAGNOSTIC_BUILD_REPORT.md  ENFORCE_SSOT.md  FINDINGS_SUMMARY.md  FIXES_SUMMARY_v0.1.3.md  FIX_AND_START.ps1  FIX_NOW.md  FIX_PORT.ps1  GATHER_LOGS.ps1  HOW_TO_RUN.md  (+100 more)
core/: Cargo.toml  build.rs  build_err.out  check_errors.txt  check_output.txt  clippy_log.txt  debug_output.txt  debug_output_2.txt  debug_output_3.txt  debug_output_4.txt  debug_output_5.txt  debug_output_6.txt  debug_output_7.txt  debug_output_final_warnings.txt  error.txt  errors.txt
core/.config/: nextest.toml
core/benches/: ffi_bench.rs  keymap_cache_bench.rs  latency.rs  metrics_bench.rs  revolutionary_mapping_bench.rs  sandbox_bench.rs
core/core-macros/: Cargo.toml
core/core-macros/src/: lib.rs  rhai_doc.rs
core/docs/: MIGRATION_TO_DI.md
core/docs/api/: api.html  api.json  api.md
core/docs/errors/: driver.md  index.md
core/examples/: test_definitions.rs
core/ffi-macros/: Cargo.toml
core/ffi-macros/src/: ffi_marshaler.rs  lib.rs
core/ffi-macros/tests/: test_ffi_marshaler_derive.rs  test_macro.rs
core/keyrx_ffi_macro/: Cargo.toml  README.md
core/keyrx_ffi_macro/src/: codegen.rs  contract_loader.rs  lib.rs  parse.rs  type_mapper.rs
core/keyrx_ffi_macro/tests/: compile_tests.rs
core/keyrx_ffi_runtime/: Cargo.toml
core/keyrx_ffi_runtime/src/: json.rs  lib.rs  panic.rs  string.rs  tests.rs  wrapper.rs
core/src/: api.rs  error.rs  lib.rs
core/src/cli/: command.rs  error.rs  exit_codes.rs  mod.rs  output.rs  result.rs  traits.rs
core/src/config/: exit_codes.rs  keys.rs  limits.rs  loader.rs  manager.rs  migration.rs  mod.rs  models.rs  paths.rs  scripting.rs  timing.rs
core/src/definitions/: library.rs  mod.rs  types.rs
core/src/discovery/: mod.rs  registry.rs  session.rs  storage.rs  types.rs  watcher.rs  watcher_linux.rs  watcher_windows.rs
core/src/drivers/: bypass.rs  common.rs  emergency_exit.rs  injector.rs  keycodes.rs  linux.rs  mod.rs  resilient.rs  windows.rs
core/src/engine/: advanced.rs  coordinate_translator.rs  decision_engine.rs  device_resolver.rs  event_loop.rs  event_recorder.rs  event_recording.rs  fallback.rs  layer_actions.rs  mod.rs  multi_device.rs  (+10 more)
core/tests/: README.md  api_unit_tests.rs  cli_commands_additional_test.rs  cli_exit_codes_test.rs  combo_test.rs  contract_adherence.rs  contract_adherence_test.rs  definition_tests.rs  device_info_test.rs  discovery_workflow.rs  doc_examples_test.rs  driver_integration_test.rs  e2e_revolutionary_mapping.rs  emergency_exit_error_scenarios_test.rs  emergency_exit_test.rs  engine_test.rs  engine_unit_tests.rs  error_code_tests.rs  ffi_macro_integration.rs  ffi_state_tests.rs  ffi_tests.rs  http_logging_test.rs  identity_tests.rs  keymap_cli_tests.rs  layer_test.rs  layout_cli_tests.rs  migration_tests.rs  observability_unit_tests.rs  panic_recovery_test.rs  phase_1_3_integration_test.rs  phase_4_integration_test.rs  pipeline_integration_tests.rs  registry_tests.rs  run_command_test.rs  run_execution_test.rs  run_integration_test.rs  sandbox_fuzz_test.proptest-regressions  sandbox_fuzz_test.rs  scripting_unit_tests.rs  session_recording_test.rs  (+9 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_deserialize.rs
keyrx_compiler/: Cargo.toml  README.md
keyrx_compiler/examples/: advanced.rhai  simple.rhai
keyrx_compiler/src/: dfa_gen.rs  error.rs  import_resolver.rs  lib.rs  main.rs  mphf_gen.rs  parser.rs  serialize.rs
keyrx_compiler/tests/: cli_tests.rs  integration_test.rs  integration_tests.rs  parser_function_test.rs  parser_function_tests.rs  property_test.rs  property_tests.rs  validators_test.rs  validators_tests.rs
keyrx_daemon/: Cargo.toml  DATA_VALIDATION_IMPLEMENTATION.md  README.md  WEBSOCKET_FILTERING_ENHANCEMENT.md  build.rs  keyrx_installer.wxs
keyrx_daemon/benches/: input_latency.rs  macos_latency.rs
keyrx_daemon/examples/: runtime_example.rs  test_device_dedup.rs
keyrx_daemon/installer/: stop-daemon-retry.ps1  validate-binary-version.ps1  verify-installation.ps1
keyrx_daemon/layouts/: ansi_104.json  hhkb.json  iso_105.json  jis_109.json  numpad.json
keyrx_daemon/src/: config_loader.rs  daemon_config.rs  error.rs  lib.rs  logging.rs  macro_recorder.rs  main.rs  test_mode.rs  version.rs
keyrx_daemon/templates/: blank.rhai  capslock_escape.rhai  default.rhai  gaming.rhai  simple_remap.rhai  vim_navigation.rhai
keyrx_daemon/tests/: README.md  REST_API_E2E_TEST_COVERAGE.md  api_devices_test.rs  api_layer_fixes_test.rs  api_profiles_test.rs  api_test_infrastructure.rs  bug_regression_tests.rs  bug_remediation_e2e_test.rs  cli_config_test.rs  cli_devices_test.rs  cli_integration.rs  cli_layers_test.rs  cli_layouts_test.rs  cli_profiles_test.rs  cli_simulate_test.rs  cli_state_test.rs  cli_status_test.rs  cli_test.rs  cli_test_command_test.rs  cli_tests.rs  component_multidevice.rs  concurrency_test.rs  daemon_health_test.rs  daemon_test.rs  daemon_tests.rs  data_validation_test.rs  di_traits_integration_test.rs  e2e_api_concurrent.rs  e2e_api_concurrent_test.rs  e2e_harness.rs  e2e_key_blocking.rs  e2e_key_blocking_test.rs  e2e_linux_multidevice.rs  e2e_macos_basic.rs  e2e_macos_multidevice.rs  e2e_profile_activation_api.rs  e2e_profile_activation_api_test.rs  e2e_test.rs  e2e_tests.rs  e2e_windows_basic.rs  (+36 more)
keyrx_daemon/ui_dist/: index.html  stats.html  stats.html.br
(+4387 files in other folders)
