[workspace]
members = ["core", "core/ffi-macros", "core/core-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
async-trait = "0.1"

# Scripting engine
rhai = "1.16"

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Concurrency utilities
crossbeam-channel = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Time utilities
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Data structures
smallvec = "1"
rand = "0.9"
dashmap = "6.1"
hdrhistogram = "7.5"
lru = "0.12"
blake3 = "1"
flate2 = "1.1"

# File watching
notify = "6.0"

# Directory walking
walkdir = "2"

# REPL readline support
rustyline = "14.0"

# Platform config directories
dirs = "6.0"

# String similarity for key name suggestions
strsim = "0.11"

# Stack traces for profiling
backtrace = "0.3"

# JSON Schema generation
schemars = { version = "0.8", features = ["chrono"] }
# JSON Schema validation
jsonschema = "0.18"

# Memory usage tracking
memory-stats = "1.2"

# OpenTelemetry for tracing
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }

# Platform-specific: Windows
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Storage_FileSystem",
] }

# Platform-specific: Linux
evdev = { version = "0.12", features = ["tokio"] }
nix = { version = "0.27", features = ["ioctl"] }
signal-hook = "0.3"

# Dev dependencies
proptest = "1"
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
assert_cmd = "2"
predicates = "3"
fastrand = "2"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Warn on println/eprintln to enforce structured logging
print_stdout = "warn"
print_stderr = "warn"

[profile.dev]
opt-level = 0
# Keep full debug info for better backtraces (level 2 = full)
debug = 2
# Enable incremental compilation for faster rebuilds (default, but explicit)
incremental = true
# More codegen units for faster parallel compilation
codegen-units = 256

# Optimize dependencies in dev mode for better performance
[profile.dev.package."*"]
opt-level = 2
# Dependencies don't need incremental compilation
incremental = false

[profile.release]
# Optimize for binary size (balanced optimization)
opt-level = "s"
# Link-time optimization for size and performance
lto = "thin"
# Strip symbols from binary
strip = true
# Reduce binary size by disabling unwinding (note: tests must use --lib or dev profile)
panic = "abort"
# More codegen units for better incremental builds, LTO will optimize across them
codegen-units = 16

# Test profile inherits from dev, allows panic=unwind for tests
[profile.test]
inherits = "dev"

[profile.profiling]
inherits = "release"
debug = true
strip = false

# Release build with debug symbols for profiling and debugging optimized code
[profile.release-debug]
inherits = "release"
debug = true
strip = false

[workspace.metadata.cargo-llvm-cov]
workspace = true
all-features = true
# Focus coverage on shipping crates; ignore macro helpers and test-only targets.
exclude-files = [
    "**/tests/**",
    "**/benches/**",
    "core/ffi-macros/**",
    "core/core-macros/**",
]
