[package]
name = "keyrx_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "keyrx"
path = "src/bin/keyrx.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
rhai = "1.16"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
smallvec = "1"
rand = "0.9"

# File watching for test --watch mode
notify = "6.0"

# REPL readline support
rustyline = "14.0"

# Platform config directories
dirs = "6.0"

# String similarity for key name suggestions
strsim = "0.11"

# OpenTelemetry for tracing (optional)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic"], optional = true }

[features]
# Enable platform drivers by default on their respective platforms
default = ["windows-driver", "linux-driver"]
otel-tracing = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
windows-driver = ["windows"]
linux-driver = ["evdev", "nix", "signal-hook"]

[dev-dependencies]
proptest = "1"
criterion = "0.5"
tokio = { version = "1", features = ["test-util"] }
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"

[[bench]]
name = "latency"
harness = false

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", optional = true, features = ["tokio"] }
nix = { version = "0.27", optional = true, features = ["ioctl"] }
signal-hook = { version = "0.3", optional = true }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
