[package]
name = "keyrx_core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "keyrx"
path = "src/bin/keyrx.rs"

[dependencies]
tokio.workspace = true
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
async-trait.workspace = true
chrono.workspace = true
smallvec.workspace = true
rand.workspace = true
dashmap.workspace = true
hdrhistogram.workspace = true
lru.workspace = true
notify.workspace = true
rustyline.workspace = true
dirs.workspace = true
strsim.workspace = true
backtrace.workspace = true
memory-stats.workspace = true
blake3.workspace = true
schemars.workspace = true
jsonschema.workspace = true
keyrx-ffi-macros = { path = "ffi-macros" }
keyrx-core-macros = { path = "core-macros" }

# OpenTelemetry for tracing (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
regex = "1.12.2"
flate2.workspace = true

[features]
# Enable platform drivers by default on their respective platforms
default = ["windows-driver", "linux-driver", "transition-logging"]
otel-tracing = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
windows-driver = ["windows"]
linux-driver = ["evdev", "nix", "signal-hook"]
transition-logging = []

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-test.workspace = true
tempfile.workspace = true
serial_test.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
fastrand.workspace = true

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "ffi_bench"
harness = false

[[bench]]
name = "metrics_bench"
harness = false

[[bench]]
name = "keymap_cache_bench"
harness = false

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
signal-hook = { workspace = true, optional = true }

# Inherit workspace lints and override critical ones to be stricter
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# CRITICAL PATH PROTECTION: Deny panic-inducing operations in core library
# These were hardened as part of unwrap-panic-hardening spec
# Use #[allow(clippy::unwrap_used)] annotation when unwrap is explicitly safe
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Note: indexing_slicing could also panic but is too pervasive to fix in this phase
# Consider enabling as "warn" in future work

# Enforce structured logging (inherited from workspace)
print_stdout = "warn"
print_stderr = "warn"
