[package]
name = "keyrx_compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrx_core = { path = "../keyrx_core" }
rhai = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
