[package]
name = "keyrx_daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["web"]
linux = []
windows = []
web = ["dep:axum", "dep:tower-http", "dep:tokio"]

[dependencies]
keyrx_core = { path = "../keyrx_core" }
keyrx_compiler = { path = "../keyrx_compiler" }
rkyv = { version = "0.7", features = ["validation"] }
thiserror = "2.0"
log = "0.4"
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Logging facade implementation for CLI
env_logger = "0.11"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
uinput = "0.1"
nix = { version = "0.29", features = ["ioctl", "poll"] }
signal-hook = "0.3"
ksni = { version = "0.3", features = ["blocking"] }
crossbeam-channel = "0.5"
image = "0.25"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }
tray-icon = "0.19"
crossbeam-channel = "0.5"
image = "0.25"

# Web server dependencies
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "2.3.0"

[dev-dependencies]
tempfile = "3.14"
# CLI testing - assert_cmd for command execution, predicates for output assertions
assert_cmd = "2.0"
predicates = "3.1"
# Process management for E2E tests - nix for proper signal handling (SIGTERM/SIGKILL)
nix = { version = "0.29", features = ["signal", "process"] }
criterion = "0.5"

[[bench]]
name = "input_latency"
harness = false
