[package]
name = "keyrx_ffi_macro"
version.workspace = true
edition.workspace = true
description = "Procedural macro for generating FFI code from contracts"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
trybuild = "1.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
